--- a/pages/forma-pagamento-credito.html
+++ b/pages/forma-pagamento-credito.html
@@ -109,10 +109,10 @@
   ========================================================== -->
     <main class="container">
         <section class="container my-5 row">
-            <div class="col-12 col-md-6 col-lg-8">
+          <div class="col-12 col-md-6 col-lg-8">
                 <h2 class="display-1 fs-1">Escolha a forma de pagamento</h2>
                 <button type="button" class="btn text-brand fs-4">&lt; Ver outras formas de pagamento</button>
-                <div class="border bg-body rounded-4 ps-4 py-3 mb-4">
+                <div class="payment-option border bg-body rounded-4 ps-4 py-3 mb-4">
                     <div class="gap-4 d-flex text-start align-items-center mb-4">
                         <input type="radio" class="form-check-input m-0" id="credito" name="forma-pagamento" value="credito" checked>
                         <label for="credito" class="w-100">
@@ -156,36 +156,35 @@
                         </div>
                     </div>
                 </div>
-            </div>
-            <div class="col-12 col-md-6 col-lg-4 d-flex align-itens-between flex-column ">
-          <div class="border bg-body rounded-4 p-5">
-            <p class="fw-bold fs-5 mb-4">Resumo do pedido</p>
-            <div class="border border-1 mb-4"></div>
-            <label for="" class="w-100 d-flex flex-column gap-2">
-              <div class="d-flex justify-content-between">
-                <p class="m-0">Produtos (5)</p>
-                <p class="m-0 fw-bold">R$ 249<sup>50</sup></p>
+          </div>
+          <!-- RESUMO DO PEDIDO -->
+          <div class="col-12 col-md-6 col-lg-4 d-flex align-itens-between flex-column ">
+            <div class="border bg-body rounded-4 p-4">
+              <p class="fw-bold display-1 fs-5 mb-4">Resumo do pedido</p>
+              <label for="" class="w-100 d-flex flex-column gap-2">
+                <div class="d-flex justify-content-between">
+                  <p class="m-0">Produtos (5)</p>
+                  <p class="m-0 fw-bold">R$ 249<sup>50</sup></p>
+                </div>
+                <div class="d-flex justify-content-between">
+                  <p class="m-0">Frete</p>
+                  <p class="m-0 fw-bold text-success">Grátis</p>
+                </div>
+                <div class="d-flex justify-content-between">
+                  <p class="m-0 text-success">Descontos</p>
+                  <p class="m-0 fw-bold text-success">R$ 10,00</p>
+                </div>
+              </label>
+              <div class="border border-1 my-4"></div>
+              <div class="my-4 mx-0 fw-bold d-flex justify-content-between">
+                <p class="m-0 p-0">Total</p>            
+                <p class="m-0 p-0">R$ 239<sup>50</sup></p>
               </div>
-              <div class="d-flex justify-content-between">
-                <p class="m-0">Frete</p>
-                <p class="m-0 fw-bold text-success">Grátis</p>
-              </div>
-              <div class="d-flex justify-content-between">
-                <p class="m-0 text-success">Descontos</p>
-                <p class="m-0 fw-bold text-success">R$ 10<sup>00</sup></p>
-              </div>
-            </label>
-            <div class="my-5 mx-0 fw-bold d-flex justify-content-between">
-              <p class="m-0 p-0">Total</p>            
-              <p class="m-0 p-0">R$ 239<sup>50</sup></p>
+              <button class="btn btn-laranja rounded-3 py-3 col-12" type="button" data-filter="continuarCompra">
+                Continuar a Compra
+              </button>
             </div>
           </div>
-            </div>
-            <div class="container text-center">
-                <button class="btn btn-laranja rounded-3 py-2 col-3" type="button" data-filter="continuarCompra">
-                Continuar a Compra
-                </button>
-            </div>
         </section>
     </main>
 
