--- a/pages/produtos.html
+++ b/pages/produtos.html
@@ -1132,7 +1132,7 @@
       <div class="row g-4">
         <!-- CARD 1 -->
         <div class="col-12 col-md-6 col-lg-3">
-          <a href="receita.html" class="receita-card d-block h-100">
+          <a href="./receitas.html" class="receita-card d-block h-100">
             <img
               src="../img/produtos/receita-contra-file.png"
               class="receita-img"
@@ -1153,7 +1153,7 @@
 
         <!-- CARD 2 -->
         <div class="col-12 col-md-6 col-lg-3">
-          <a href="receita.html" class="receita-card d-block h-100">
+          <a href="./receitas.html" class="receita-card d-block h-100">
             <img
               src="../img/produtos/receita-carne.png"
               class="receita-img"
@@ -1174,7 +1174,7 @@
 
         <!-- CARD 3 -->
         <div class="col-12 col-md-6 col-lg-3">
-          <a href="receita.html" class="receita-card d-block h-100">
+          <a href="./receitas.html" class="receita-card d-block h-100">
             <img
               src="../img/produtos/receita-file.png"
               class="receita-img"
@@ -1197,7 +1197,7 @@
 
         <!-- CARD 4 -->
         <div class="col-12 col-md-6 col-lg-3">
-          <a href="receita.html" class="receita-card d-block h-100">
+          <a href="./receitas.html"  class="receita-card d-block h-100">
             <img
               src="../img/produtos/receita-carne.png"
               class="receita-img"
@@ -1221,7 +1221,7 @@
 
       <!-- Botão CTA -->
       <div class="text-center mt-4">
-        <a href="receita.html" class="btn btn-receitas"
+        <a href="./receitas.html" class="btn btn-receitas"
           >VER TODAS AS RECEITAS</a
         >
       </div>
