--- a/pages/receitas.html
+++ b/pages/receitas.html
@@ -241,7 +241,7 @@
 
         <!-- CARD 1 -->
         <div class="col-12 col-md-6 col-lg-3">
-          <a href="receita.html" class="receita-card d-block h-100">
+          <a href="./receitas.html" class="receita-card d-block h-100">
             <img
               src="../img/produtos/receita-contra-file.png"
               class="receita-img"
@@ -262,7 +262,7 @@
 
         <!-- CARD 2 -->
         <div class="col-12 col-md-6 col-lg-3">
-          <a href="receita.html" class="receita-card d-block h-100">
+          <a href="./receitas.html" class="receita-card d-block h-100">
             <img
               src="../img/produtos/receita-carne.png"
               class="receita-img"
@@ -283,7 +283,7 @@
 
         <!-- CARD 3 -->
         <div class="col-12 col-md-6 col-lg-3">
-          <a href="receita.html" class="receita-card d-block h-100">
+          <a href="./receitas.html" class="receita-card d-block h-100">
             <img
               src="../img/produtos/receita-file.png"
               class="receita-img"
@@ -306,7 +306,7 @@
 
         <!-- CARD 4 -->
         <div class="col-12 col-md-6 col-lg-3">
-          <a href="receita.html" class="receita-card d-block h-100">
+          <a href="./receitas.html" class="receita-card d-block h-100">
             <img
               src="../img/produtos/receita-carne.png"
               class="receita-img"
@@ -332,7 +332,7 @@
       <div class="row g-4 pt-lg-4">
         <!-- CARD 1 -->
         <div class="col-12 col-md-6 col-lg-3">
-          <a href="receita.html" class="receita-card d-block h-100">
+          <a href="./receitas.html" class="receita-card d-block h-100">
             <img
               src="../img/produtos/receita-contra-file.png"
               class="receita-img"
@@ -353,7 +353,7 @@
 
         <!-- CARD 2 -->
         <div class="col-12 col-md-6 col-lg-3">
-          <a href="receita.html" class="receita-card d-block h-100">
+          <a href="./receitas.html" class="receita-card d-block h-100">
             <img
               src="../img/produtos/receita-carne.png"
               class="receita-img"
@@ -374,7 +374,7 @@
 
         <!-- CARD 3 -->
         <div class="col-12 col-md-6 col-lg-3">
-          <a href="receita.html" class="receita-card d-block h-100">
+          <a href="./receitas.html" class="receita-card d-block h-100">
             <img
               src="../img/produtos/receita-file.png"
               class="receita-img"
@@ -397,7 +397,7 @@
 
         <!-- CARD 4 -->
         <div class="col-12 col-md-6 col-lg-3">
-          <a href="receita.html" class="receita-card d-block h-100">
+          <a href="./receitas.html" class="receita-card d-block h-100">
             <img
               src="../img/produtos/receita-carne.png"
               class="receita-img"
@@ -423,7 +423,7 @@
       <div class="row g-4 pt-lg-4">
         <!-- CARD 1 -->
         <div class="col-12 col-md-6 col-lg-3">
-          <a href="receita.html" class="receita-card d-block h-100">
+          <a href="./receitas.html" class="receita-card d-block h-100">
             <img
               src="../img/produtos/receita-contra-file.png"
               class="receita-img"
@@ -444,7 +444,7 @@
 
         <!-- CARD 2 -->
         <div class="col-12 col-md-6 col-lg-3">
-          <a href="receita.html" class="receita-card d-block h-100">
+          <a href="./receitas.html" class="receita-card d-block h-100">
             <img
               src="../img/produtos/receita-carne.png"
               class="receita-img"
@@ -465,7 +465,7 @@
 
         <!-- CARD 3 -->
         <div class="col-12 col-md-6 col-lg-3">
-          <a href="receita.html" class="receita-card d-block h-100">
+          <a href="./receitas.html" class="receita-card d-block h-100">
             <img
               src="../img/produtos/receita-file.png"
               class="receita-img"
@@ -488,7 +488,7 @@
 
         <!-- CARD 4 -->
         <div class="col-12 col-md-6 col-lg-3">
-          <a href="receita.html" class="receita-card d-block h-100">
+          <a href="./receitas.html" class="receita-card d-block h-100">
             <img
               src="../img/produtos/receita-carne.png"
               class="receita-img"
