feature pagina pontos

--- a/pages/pontos.html
+++ b/pages/pontos.html
@@ -206,8 +206,39 @@
        >> Use .container para manter o grid alinhado ao restante do site.
   ========================================================== -->
     <main class="container my-5">
-      <h1 class="h3 mb-4">Título da Página</h1>
-      <!--  insira aqui o conteúdo da página -->
+      <section class="container my-4">
+      <div class="hero-banner rounded-4 overflow-hidden position-relative">
+        <!-- Imagem desktop -->
+        <img
+          src="../img/banners/banner-pontos.png"
+          alt="Conteudo-pontos"
+          class="w-100 d-none d-md-block"
+        />
+        <!-- Imagem mobile -->
+        <img
+          src="../img/banners/banner-pontos.png"
+          alt="Conteudo-pontos"
+          class="w-100 d-md-none"
+        />
+
+      </div>
+
+       <div class="overflow-hidden position-relative">
+        <!-- Imagem desktop -->
+        <img
+          src="../img/banners/conteudo-pontos.png"
+          alt="Conteudo-pontos"
+          class="w-100 py-4 d-none d-md-block"
+        />
+
+        <!-- Imagem mobile -->
+        <img
+          src="../img/banners/conteudo-pontos.png"
+          alt="Conteudo-pontos"
+          class="w-100 py-4 d-md-none"
+        />
+    </section>
+
     </main>
 
     <!-- ================= RODAPÉ NAO ALTERAR ================= -->
